<resources>
    <string name="app_name">Darul-uloom</string>
    <string name="logo">logo</string>
    <string name="add_student">نیا شاگرد</string>
    <string name="student_name">شاگرد کا نام</string>
    <string name="register">اندراج</string>
    <string name="cancel">منسوخ</string>
    <string name="error_msg">یہ فیلڈ خالی نہیں ہو سکتی</string>
    <string name="view_records">ریکارڈ</string>
    <string name="commits">کمٹس</string>
    <string name="student_added">شاگرد شامل کر دیا گیا یے</string>
    <string name="error_while_adding_student">شاگرد کا اندراج ناکام</string>
    <string name="student_id">شاگرد کی آی ڈی</string>
    <string name="manzil">منزل</string>
    <string name="sabqi">سبقی</string>
    <string name="start">شروع</string>
    <string name="end">ختم</string>
    <string name="sabaq">سبق</string>
    <string name="date">تاریخ</string>
    <string name="yes">ہاں</string>
    <string name="no">نہیں</string>
    <string name="add_record">ریکارڈ اندراج</string>
    <string name="today_record">آج کا ریکارڈ</string>
    <string name="sabaq_error">سبق لازمی چاہیئے</string>
    <string name="start_error">شروع لازمی چاہیئے</string>
    <string name="end_error">ختم لازمی چاہیئے</string>
    <string name="manzil_error">منزل لازمی چاہیئے</string>
    <string name="record_added">ریکارڈ شامل کر دیا گیا یے</string>
    <string name="error_while_adding">ریکارڈ کا اندراج ناکام</string>
</resources>