<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_dark"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20sp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/view_records"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginStart="10sp"
            android:contentDescription="@string/add_student"
            android:src="@drawable/student_icon" />
    </LinearLayout>
    <LinearLayout
        android:paddingVertical="5sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_marginVertical="20sp"
        android:orientation="horizontal">
        >

        <TextView
            android:layout_width="0sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/mazil"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sabqi"
            android:textColor="@color/white"
            android:background="@drawable/border_left"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="0sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end"
            android:textColor="@color/white"
            android:background="@drawable/border_left"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="0sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            android:background="@drawable/border_left"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="0sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sabaq"
            android:background="@drawable/border_left"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:background="@drawable/border_left"
            android:layout_width="0sp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:drawSelectorOnTop="true"
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>